完成 KNOW-02 候选识别审核工作流
实现候选分类、去重、审核分派、候选状态与 V52 五方言迁移；清理旧草稿版本创建口径。验证：本地聚焦后端测试、后端全量、changed T-GATE、中文注释和远端 CI 8/8 通过。